@@ -81,7 +81,7 @@ public class RegistraGruppoMovimenti extends VelocityCommand {
 		Integer newNum  ;
 		try {
 			newNum = adapter.getNextNumRegistro();
-			m.setNumRegistro( new Long(newNum ) );
+			m.setNumRegistro( Long.valueOf(newNum ) );
 			adapter.update(m);
 		}
 		catch (Exception e ) {
@@ -97,7 +97,7 @@ public class RegistraGruppoMovimenti extends VelocityCommand {
 
 		Integer newNum = null ;
 		Movimento m = null ;
-		Vector movimenti = null ;
+		Vector<?> movimenti = null ;
 
 		FormattedDate oldData = null ;
 		Boolean oldScarico = null;
@@ -109,7 +109,7 @@ public class RegistraGruppoMovimenti extends VelocityCommand {
 
 
 			if ( movimenti != null ) {
-				for ( Iterator im = movimenti.iterator() ; im.hasNext(); ) {
+				for ( Iterator<?> im = movimenti.iterator() ; im.hasNext(); ) {
 
 					m = (Movimento) im.next();
 
@@ -128,7 +128,7 @@ public class RegistraGruppoMovimenti extends VelocityCommand {
 					oldRettifica = m.getIsRettifica();
 
 
-					m.setNumRegistro( new Long(newNum ) );
+					m.setNumRegistro( Long.valueOf(newNum ) );
 					adapter.update(m);
 
 
@@ -164,7 +164,7 @@ public class RegistraGruppoMovimenti extends VelocityCommand {
 					oldData = m.getData() ;
 				}
 				else {
-					m.setNumRegistro( new Long(newNum ) );
+					m.setNumRegistro( Long.valueOf(newNum ) );
 					adapter.update(m);
 				}
 
